src/demo/demo.css
html,
body,
.container {
    width: 100vw;
    height: 100vh;
    min-width: 100vw;
    min-height: 100vh;
    position: relative;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

.container {
    display: flex;
    flex-direction: column;
}

.demo-header {
    padding: 0.5em;
    flex-shrink: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.demo-title {
    font-family: monospace;
    font-size: 12px;
    flex: 1;
}

.demo-subtitle {
    font-family: sans-serif;
    font-size: 12px;
}

.demo-subtitle a {
    text-decoration: none;
    color: teal;
}

.demo-app {
    flex: 1;
}

#blockly-div-wrapper {
    position: relative;
    overflow: hidden;
    height: 100%;
    min-height: 100%;
}

#blockly-div {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

#blockly-div .blocklyToolboxContents {
    padding: 0.5em;
}

#blockly-div .blocklyToolboxCategory {
    margin-bottom: 5px;
}

/* Custom toolbox CSS */
.demo-row-icon {
    display: block;
    font-size: 32px;
    width: 32px;
    height: 32px;
    overflow: hidden;
    color: white;
}

.demo-row-label {
    display: block;
    font-size: 14px;
    color: white;
    font-family: sans-serif;
    margin-top: 4px;
}

.demo-row-container {
    display: flex;
    border-radius: 4px;
}

.demo-row-contents-container {
    padding: 4px;
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Split JS CSS */
.split {
    display: flex;
    flex-direction: row;
    height: 100%;
    min-height: 100%;
}

.gutter {
    background-color: #eee;
    background-repeat: no-repeat;
    background-position: 50%;
}

.gutter.gutter-horizontal {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
    cursor: col-resize;
}

#split-1,
#split-0 {
    position: relative;
    width: 50%;
}

/* Code related CSS */
#code-wrapper {
    margin: 0;
    height: 100%;
}

#code {
    height: 100%;
    overflow: auto;
    font-size: 10pt;
}

/* Copy JS CSS */
#copy {
    position: absolute;
    top: 5px;
    right: 5px;
    border: none;
    border-radius: 4px;
    padding: 5px 10px;
    font-family: sans-serif;
    font-size: 14px;
    background-color: rgb(91, 165, 140);
    color: #fff;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
}

/* Toast CSS */
.toast {
    font-family: sans-serif;
    font-size: 14px;
    background-color: rgb(91, 165, 140);
    box-shadow: none !important;
}

